src/objects/LeadOwnerAssignment__c.object
<CustomObject>
    <fields>
        <fullName>CBG__c</fullName>
        <label>CBG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Non-Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_ZIP_Code__c</fullName>
        <label>End ZIP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LeadOwnerAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Disti__c</fullName>
        <label>Preferred Disti</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_ZIP_Code__c</fullName>
        <label>Start ZIP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LeadOwnerAssignment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>LeadOwnerAssignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeadOwnerAssignments</pluralLabel>
    <recordTypes>
        <fullName>CBG_Assignment</fullName>
        <active>true</active>
        <label>CBG Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preferred_Disti_Assignment</fullName>
        <active>true</active>
        <label>Preferred Disti Assignment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>